--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.10",
+    "helius-sdk": "^1.4.0",
     "lightweight-charts": "^4.2.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-flow-renderer": "^10.3.17",
     "react-tooltip": "^5.28.0",
     "recharts": "^2.13.2",
     "sonner": "^1.5.0",
