--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -36,7 +36,7 @@ jobs:
       # Step 6: Run Cypress tests
       - name: Run Cypress Tests
         run: Cypress run
-        uses: cypress-io/github-action@v5
+        # uses: cypress-io/github-action@v5
         env:
           CI: true  # Ensure Cypress runs in CI mode
 
