--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
+    "@jet-lab/e2e-react-adapter": "^0.1.3",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@solana/wallet-adapter-react": "^0.15.35",
