--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-tooltip": "^5.28.0",
     "recharts": "^2.13.2",
     "sonner": "^1.5.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
